# ddbj-record-specifications

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  pyproject.toml
ddbj_record_validator/: schema_v1.py  schema_v2.py  utils.py
ddbj_record_validator/feature_table/: parse_feature_table.py
feature_table/: features.json  features_full.json  qualifiers.json
schemas/v1.0/: ddbj_record.schema.json  schema.json
schemas/v2.0/: ddbj_record.schema.json
tests/: README.md  dfast_record_v1.0_trimmed.json  test.json.jsonc  trim_sequence_field.py
